resend and timer in otp

--- a/Project/views/admin/adDashUserManage.ejs
+++ b/Project/views/admin/adDashUserManage.ejs
@@ -9,7 +9,8 @@
                     <a href="dashboard" class="list-group-item list-group-item-action bg-transparent second-text active">Dashboard</a>
                     <a href="productmanagement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
                     <a href="category" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-                    <a href="userMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold text-success">User mangement</a>
+                    <a href="userMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+                    <a href="orderMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order management</a>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add coupons</a>
                     <a href="logout" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
                 </div>
