--- a/Project/views/user/productDetails.ejs
+++ b/Project/views/user/productDetails.ejs
@@ -76,28 +76,28 @@
             <img src = "/static/product-image/<%=data._id%>.jpg" alt = "">
           </div>
         </div>
-        <!-- <div class = "img-select">
+       <div class = "img-select">
           <div class = "img-item">
             <a href = "#" data-id = "1">
-              <img src = "/static/product-image/630c9c2b8f1ca9e01cfc4baf.jpg" alt = "shoe image">
+              <img src = "/static/product-image/<%=data._id%>.jpg" alt = "shoe image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "2">
-              <img src = "/static/product-image/630c9c2b8f1ca9e01cfc4baf.jpg" alt = "shoe image">
+              <img src = "/static/product-image/<%=data._id%>1.jpg" alt = "shoe image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "3">
-              <img src = "/static/product-image/630c9c2b8f1ca9e01cfc4baf.jpg" alt = "shoe image">
+              <img src = "/static/product-image/<%=data._id%>2.jpg" alt = "shoe image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "4">
-              <img src = "/static/product-image/630c9c2b8f1ca9e01cfc4baf.jpg" alt = "shoe image">
+              <img src = "/static/product-image/<%=data._id%>3.jpg" alt = "shoe image">
             </a>
           </div>
-        </div> -->
+        </div>
       </div>
         </div>
         <div class="col-md-7">
