--- a/Project/views/admin/edit-product.ejs
+++ b/Project/views/admin/edit-product.ejs
@@ -40,7 +40,7 @@
     </div>
 
     <script>
-        function viewImage(params) {
+        function viewImage(event) {
             document.getElementById('imgView').src  = URL.createObjectURL(event.target.files[0])
         }
     </script>
