--- a/Project/views/user/cart.ejs
+++ b/Project/views/user/cart.ejs
@@ -3,7 +3,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
         <div class="container">
-            <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
+            <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
                 <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
             </a>
 
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse order-lg-1" id="navMenu">
                 <ul class="navbar-nav mx-auto text-center">
                     <li class="nav-item px-2 py-2">
-                        <a class="nav-link text-uppercase text-dark" href="#header">home</a>
+                        <a class="nav-link text-uppercase text-dark" href="/">home</a>
                     </li>
                     <li class="nav-item px-2 py-2">
                         <a class="nav-link text-uppercase text-dark" href="#collection">collection</a>
