--- a/Project/views/user/profile.ejs
+++ b/Project/views/user/profile.ejs
@@ -1,155 +1,167 @@
 <%-include('header')-%>
-    <section class="ftco-section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-8 ftco-animate">
-						<form action="/users/editprofile"  method="post" class="billing-form">
-							<h3 class="mb-4 billing-heading">Profile</h3>
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-xl-8 ftco-animate">
+					<form action="/users/editprofile" method="post" class="billing-form">
+						<h3 class="mb-4 billing-heading">Profile</h3>
 
-	          	<div class="row align-items-end">
-	          		<div class="col-md-6">
-	                <div class="form-group">
-						
-	                	<label for="name">First Name</label>
-	                  <input type="text "name="firstName" style="font-weight: bold;"  value="<%=user.firstName%>" class="form-control" placeholder="name">
-	                </div>
-	              </div>
-                  <div class="col-md-6">
-	                <div class="form-group">
-	                	<label for="phone">Last Name</label>
-	                  <input type="text" name="lastName" style="font-weight: bold;" value="<%=user.lastName%>"  class="form-control fw" placeholder="phone">
-	                </div>
-	              </div>
-	              <div class="col-md-6">
-	                <div class="form-group">
-	                	<label for="emailaddress">Email Address</label>
-	                  <input type="text" name="email" style="font-weight: bold;" value="<%=user.email%>"  class="form-control" placeholder="email">
-					 
-	                </div>
-                </div>
-				
-			</div>
-			<a  href="/edituser"  class="btn btn-primary mt-5 py-3  px-4">Edit Yourselves</a>
-            <a href = "/orders" class = "btn btn-primary mt-5 py-3  px-4 ">VIEW ORDERS</a>
+						<div class="row align-items-end">
+							<div class="col-md-6">
+								<div class="form-group">
 
-			</form>
-		
-			<div class="col-xl-8 ftco-animate">
-			
-		
-			<div class="w-100"></div>
-			<div class="col-md-12 my-5">
-			 
-			    <div class="forgot_password" >
-					<a href="/users/changepassword" class="mr-3"> change Password</a>					  
-				</div>
-							 
-			 </div> 
-		 </div>
-
-		 
-		 
-		 
-			<form action="/saveaddress" method="post" id="" class="billing-form">
-				<h3 class="mb-4 billing-heading">Add Address</h3>
-				<div class="form-group">
-				
-				
-                <div class="w-100"></div> 
-		          	<div class="row align-items-end">
-						<div class="col-md-6">
-							<div class="form-group">
-								<label for="streetaddress">First Name</label>
-								  <input type="text" class="form-control" name="firstname" required placeholder="First name">
-							</div>
+									<label for="name">First Name</label>
+									<input type="text " name="firstName" style="font-weight: bold;"
+										value="<%=user.firstName%>" class="form-control" placeholder="name">
+								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-									<label for="streetaddress">Last Name</label>
-									  <input type="text" class="form-control" name="lastname" required placeholder="Last name">
+									<label for="phone">Last Name</label>
+									<input type="text" name="lastName" style="font-weight: bold;"
+										value="<%=user.lastName%>" class="form-control fw" placeholder="phone">
 								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<label for="emailaddress">Email Address</label>
+									<input type="text" name="email" style="font-weight: bold;" value="<%=user.email%>"
+										class="form-control" placeholder="email">
+
 								</div>
-		            <div class="col-md-6">
-		            <div class="form-group">
-	                	<label for="streetaddress">Street Address</label>
-	                  	<input type="text" class="form-control" name="address" required placeholder="House number and building name">
-	                </div>
-		            </div>
-					
-		            <div class="col-md-6">
-		            	<div class="form-group">
-						<label for="streetaddress">Town</label>
-	                  <input type="text" class="form-control" name="town" required placeholder="Town" >
-	                </div>
-		            </div>
-		            <div class="w-100"></div>
-		            <div class="col-md-6">
-		            	<div class="form-group">
-	                	<label for="towncity">State / City</label>
-	                  <input type="text " name="state" required class="form-control" placeholder="State">
-	                </div>
-		            </div>
-		            <div class="col-md-6">
-		            	<div class="form-group">
-		            		<label for="postcodezip">Postcode / ZIP *</label>
-	                  <input type="number" name="pincode" required class="form-control" placeholder="postcode">
-	                </div>
-		            </div>
-		            <div class="w-100"></div>
+							</div>
+
+						</div>
+						<a href="/edituser" class="btn btn-primary mt-5 py-3  px-4">Edit Yourselves</a>
+						<a href="/orders" class="btn btn-primary mt-5 py-3  px-4 ">VIEW ORDERS</a>
+
+					</form>
+
 					<div class="col-xl-8 ftco-animate">
-						<button  type="submit"  class="btn btn-primary mt-5 py-3  px-4">save Address </button>
-					 </div>
-			</form>
-			<div class="w-100"></div>
-		
-				<div class="col-md-10 d-flex mt-5">
-					<div class="cart-detail bg-light p-5 p-md-4">
-						<h5 class=" mb-4" style="font-weight: bold;"> Saved Address </h5>
-						
-							  <hr>
-							  <%if(addedAddress){%>
-							  <%addedAddress.forEach((element,i)=>{%>
-							  <p class="d-flex total-price">
-								  <span class="col-7"><%=element.address%> <%=element.town%> <%=element.pincode%></span>
-								  <button  onclick="removeAddress('<%=element._id%>')" class = "btn btn-primary pt-2">Remove</button>
-								</p>
-							  <%})%>
-							  <%}else{%>
-								<p class="d-flex total-price">
-									<span lass="col-12">Saved address is empty</span>	
-								</p>
-								<%}%>
-							  </div>
+
+
+						<div class="w-100"></div>
+						<div class="col-md-12 my-5">
+
+							<div class="forgot_password">
+								<a href="/changepassword" class="mr-3"> change Password</a>
+							</div>
+						</div>
+					</div>
+
+
+
+
+					<form action="/saveaddress" method="post" id="" class="billing-form">
+						<h3 class="mb-4 billing-heading">Add Address</h3>
+						<div class="form-group">
+
+
+							<div class="w-100"></div>
+							<div class="row align-items-end">
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="streetaddress">First Name</label>
+										<input type="text" class="form-control" name="firstname" required
+											placeholder="First name">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="streetaddress">Last Name</label>
+										<input type="text" class="form-control" name="lastname" required
+											placeholder="Last name">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="streetaddress">Street Address</label>
+										<input type="text" class="form-control" name="address" required
+											placeholder="House number and building name">
+									</div>
+								</div>
+
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="streetaddress">Town</label>
+										<input type="text" class="form-control" name="town" required placeholder="Town">
+									</div>
+								</div>
+								<div class="w-100"></div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="towncity">State / City</label>
+										<input type="text " name="state" required class="form-control"
+											placeholder="State">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="postcodezip">Postcode / ZIP *</label>
+										<input type="number" name="pincode" required class="form-control"
+											placeholder="postcode">
+									</div>
+								</div>
+								<div class="w-100"></div>
+								<div class="col-xl-8 ftco-animate">
+									<button type="submit" class="btn btn-primary mt-5 py-3  px-4">save Address </button>
+								</div>
+					</form>
+					<div class="w-100"></div>
+
+					<div class="col-md-10 d-flex mt-5">
+						<div class="cart-detail bg-light p-5 p-md-4">
+							<h5 class=" mb-4" style="font-weight: bold;"> Saved Address </h5>
+
+							<hr>
+							<%if(addedAddress){%>
+								<%addedAddress.forEach((element,i)=>{%>
+									<p class="d-flex total-price">
+										<span class="col-7">
+											<%=element.firstname%>
+												<%=element.lastname%>
+													<%=element.address%>
+														<%=element.town%>
+															<%=element.pincode%>
+										</span>
+										<button onclick="removeAddress('<%=element._id%>')"
+											class="btn btn-primary pt-2">Remove</button>
+									</p>
+									<%})%>
+										<%}else{%>
+											<p class="d-flex total-price">
+												<span lass="col-12">Saved address is empty</span>
+											</p>
+											<%}%>
+						</div>
+					</div>
 				</div>
-        </div>
-      </div>
-    </section> 
+			</div>
+	</section>
 
 	<script>
 		function removeAddress(proId) {
-		  Swal.fire({
-			  title: 'Are you sure?',
-			  text: "You won't be able to revert this!",
-			  icon: 'warning',
-			  showCancelButton: true,
-			  confirmButtonColor: '#3085d6',
-			  cancelButtonColor: '#d33',
-			  confirmButtonText: 'Yes, cancel it!'
-		  }).then((result) => {
-			  if (result.isConfirmed) {
-				  Swal.fire(
-					  'Order Canceled!',
-					  'Your order has been canceled.',
-					  'success'
-				  ).then(() => {
-					  location.href = `/removeaddress/${proId}`
-				  })
-			  }
-		  })
+			Swal.fire({
+				title: 'Are you sure?',
+				text: "You won't be able to revert this!",
+				icon: 'warning',
+				showCancelButton: true,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Yes, cancel it!'
+			}).then((result) => {
+				if (result.isConfirmed) {
+					Swal.fire(
+						'Order Canceled!',
+						'Your order has been canceled.',
+						'success'
+					).then(() => {
+						location.href = `/removeaddress/${proId}`
+					})
+				}
+			})
 		}
-	  </script>
-	  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	</script>
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <%-include('footer')-%>
-  
- 
+	<%-include('footer')-%>
