--- a/Project/views/user/cart.ejs
+++ b/Project/views/user/cart.ejs
@@ -87,7 +87,7 @@
                                         </h6>
                                     </td>
                                     <td>
-                                        <button id="hellobutton" class="cart-increase-button" onclick="changeQuantity(`<%=element._id%>`,`<%=element.product._id%>`,`<%=userId%>`,-1)">-</button><span id="<%=element.product._id%>"><%=element.quantity%></span> <button id="hellobutton" class="cart-increase-button"
+                                        <button id="hellobutton" class="cart-increase-button" style="border-radius:50px ;" onclick="changeQuantity(`<%=element._id%>`,`<%=element.product._id%>`,`<%=userId%>`,-1)">-</button><span id="<%=element.product._id%>"><%=element.quantity%></span> <button style="border-radius:50px  ;" id="hellobutton" class="cart-increase-button"
                                             onclick="changeQuantity(`<%=element._id%>`,`<%=element.product._id%>`,`<%=userId%>`,1)">+</button>
                                     </td>
                                     <td>
