--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -56,13 +56,17 @@
                         <thead>
                             <tr>
                                 <th scope="col" width="50">Graphical</th>
-                               
                             </tr>
                         </thead>
                         <tbody>
                             
                         </tbody>
                     </table>
+                    
+            
+                    <div  class="col-md-5 pt-4 " style="max-width: 100%; height: 100%;">
+                        <canvas id="myChart" width="400" height="400"></canvas>
+                    </div>
                 </div>
                 
             </div>
@@ -80,6 +84,93 @@
     toggleButton.onclick = function () {
         el.classList.toggle("toggled");
     };
+
+    let myChart = document.getElementById('myChart')
+    const masspopChart = new Chart(myChart, {
+    type: 'line',
+    data: {
+        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+        datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+    }
+});
+
+// let massPopChart = new Chart(myChart, {
+//       type:'pie', // bar, horizontalBar, pie, line, doughnut, radar, polarArea
+//       data:{
+//          labels: ["Kid", "Men", "Women"],
+//         datasets:[{
+//           label:'Population',
+//         //    data: [{{Categorysales.[0].count}},{{Categorysales.[1].count}},{{Categorysales.[2].count}}],
+//           //backgroundColor:'green',
+//           backgroundColor: [
+//                         "#5b6be8",
+//                         "#fb6ba8",
+//                         "#ec6be8",
+//                         "#2b6be8",
+                       
+//                     ],
+//                     hoverBackgroundColor: [
+//                         "#5b6be8",  
+//                     ],
+//                     hoverBorderColor: "#fff"
+          
+//         }]
+//       },
+//       options:{
+//         title:{
+//           display:true,
+//              text:'Category wise sale',
+//           fontSize:15
+//         },
+//         legend:{
+//           display:true,
+//           position:'right',
+//           labels:{
+//             fontColor:'#000'
+//           }
+//         },
+//         layout:{
+//           padding:{
+//             left:50,
+//             right:0,
+//             bottom:0,
+//             top:0
+//           }
+//         },
+//         tooltips:{
+//           enabled:true
+//         }
+//       }
+//     });
+  </script>
+    
 </script>
 
 
