--- a/Project/views/user/landingPage.ejs
+++ b/Project/views/user/landingPage.ejs
@@ -72,12 +72,12 @@
             <div class = "collapse navbar-collapse order-lg-1" id = "navMenu">
                 <ul class = "navbar-nav mx-auto text-center">
                     <li class = "nav-item px-2 py-2">
-                        <a class = "nav-link text-uppercase text-dark" href = "#header">home</a>
+                        <a class = "nav-link text-uppercase text-dark" href = "/">home</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
                         <!-- <a class = "nav-link text-uppercase text-dark" href = "#collection">collection</a> -->
                         <div class="dropdown ">
-                            <a class="dropbtn nav-link text-uppercase text-dark">collection</a>
+                            <a class="dropbtn nav-link text-uppercase text-dark">Category</a>
                             <div class="dropdown-content">
                             <%categories.forEach((element)=>{%>
                               <a href="products/categories/<%=element._id%>"><%=element.name%></a>
@@ -108,11 +108,126 @@
     </header> -->
     <!-- end of header -->
 
+    
+    <!-- custom js -->
+    <script src = "/static/javascripts/landing.js"></script>
+
+
+<%-include('footer')-%>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attire Home</title>
+    <!-- fontawesome cdn -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <!-- bootstrap css -->
+    <!-- <link rel = "stylesheet" href = "bootstrap-5.0.2-dist/css/bootstrap.min.css"> -->
+    <!-- custom css -->
+    <!-- <link rel = "stylesheet" href = "css/main.css"> -->
+</head>
+<body>
+    
+   
+
+    <!-- header -->
+    <header id = "header" class = "vh-100 carousel slide" data-bs-ride = "carousel" style = "padding-top: 104px;">
+        <div class = "container h-100 d-flex align-items-center carousel-inner">
+            <div class = "text-center carousel-item active">
+                <h2 class = "text-capitalize text-white">best collection</h2>
+                <h1 class = "text-uppercase py-2 fw-bold text-white">new arrivals</h1>
+                <a href = "#" class = "btn mt-3 text-uppercase">shop now</a>
+            </div>
+            <div class = "text-center carousel-item">
+                <h2 class = "text-capitalize text-white">best price & offer</h2>
+                <h1 class = "text-uppercase py-2 fw-bold text-white">new season</h1>
+                <a href = "#" class = "btn mt-3 text-uppercase">buy now</a>
+            </div>
+        </div>
+
+        <button class = "carousel-control-prev" type = "button" data-bs-target="#header" data-bs-slide = "prev">
+            <span class = "carousel-control-prev-icon"></span>
+        </button>
+        <button class = "carousel-control-next" type = "button" data-bs-target="#header" data-bs-slide = "next">
+            <span class = "carousel-control-next-icon"></span>
+        </button>
+    </header>
+    <!-- end of header -->
+
+
     <!-- special products -->
     <section id = "special" class = "py-5">
         <div class = "container">
             <div class = "title text-center py-5">
-                <h2 class = "position-relative d-inline-block"></h2>
+                <h2 class = "position-relative d-inline-block">Shop by Category</h2>
+            </div>
+
+            <div class = "special-list row g-0">
+                <%categories.forEach((element)=>{%>
+                <div class = "col-md-6 col-lg-4 col-xl-3 p-2">
+                    <div class = "text-center">
+                       
+                        <p class = "text-capitalize mt-3 mb-1"></p>
+                        <a href = "products/categories/<%=element._id%>" class = "btn btn-primary mt-3"><%=element.name%></a>
+                        
+                    </div>
+                </div>
+                <%})%>
+            </div>
+        </div>
+    </section>
+    <!-- end of special products -->
+
+    <!-- collection -->
+    <section id = "collection" class = "py-5">
+        <div class = "container">
+            <div class = "title text-center">
+                <h2 class = "position-relative d-inline-block">New Collection</h2>
+            </div>
+
+            <div class = "row g-0">
+                <div class = "d-flex flex-wrap justify-content-center mt-5 filter-button-group">
+                    <button type = "button" class = "btn m-2 text-dark active-filter-btn" data-filter = "*">All</button>
+                    <button type = "button" class = "btn m-2 text-dark" data-filter = ".best">Best Sellers</button>
+                    <button type = "button" class = "btn m-2 text-dark" data-filter = ".feat">Featured</button>
+                    <button type = "button" class = "btn m-2 text-dark" data-filter = ".new">New Arrival</button>
+                </div>
+
+                <div class = "collection-list mt-4 row gx-0 gy-3">
+
+                    <div class = "col-md-6 col-lg-4 col-xl-3 p-2 feat">
+                        <div class = "collection-img position-relative">
+                            <img src = "images/c_t-shirt_men.png" class = "w-100">
+                            <span class = "position-absolute bg-primary text-white d-flex align-items-center justify-content-center">sale</span>
+                        </div>
+                        <div class = "text-center">
+                            <div class = "rating mt-3">
+                                <span class = "text-primary"><i class = "fas fa-star"></i></span>
+                                <span class = "text-primary"><i class = "fas fa-star"></i></span>
+                                <span class = "text-primary"><i class = "fas fa-star"></i></span>
+                                <span class = "text-primary"><i class = "fas fa-star"></i></span>
+                                <span class = "text-primary"><i class = "fas fa-star"></i></span>
+                            </div>
+                            <p class = "text-capitalize my-1">gray shirt</p>
+                            <span class = "fw-bold">$ 45.50</span>
+                        </div>
+                    </div>
+
+                   
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of collection -->
+
+     <!-- special products -->
+     <section id = "special" class = "py-5">
+        <div class = "container">
+            <div class = "title text-center py-5">
+                <h2 class = "position-relative d-inline-block">Products</h2>
             </div>
             
             <div class = "special-list row g-0">
@@ -121,8 +236,9 @@
                     <%if(element.isDeleted === false){%>
                 <div class = "col-md-6 col-lg-4 col-xl-3 p-2">
                     
-                    <div class = "special-img position-relative overflow-hidden">
-                        <img src = "/static/product-image/<%=element._id%>.jpg" class = "w-100">
+                    <div class = "special-img position-relative overflow-hidden" style="width: 300px;height: 200px;">
+                        <img src = "/static/product-image/<%=element._id%>.jpg" class = "w-100" style="max-width: 100%;
+                        max-height: 100%;" >
 
                         <span class = "position-absolute d-flex align-items-center justify-content-center text-primary fs-4">
                         </span>
@@ -142,6 +258,11 @@
         </div>
     </section>
     <!-- end of special products -->
+
+    
+
+   
+
     
 
 
@@ -154,7 +275,7 @@
                     <h2 class = "position-relative d-inline-block ms-4">Newsletter Subscription</h2>
                 </div>
 
-                <p class = "text-center text-muted">WHY HERE SEE</p>
+                <p class = "text-center text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus rem officia accusantium maiores quisquam dolorum?</p>
                 <div class = "input-group mb-3 mt-3">
                     <input type = "text" class = "form-control" placeholder="Enter Your Email ...">
                     <button class = "btn btn-primary" type = "submit">Subscribe</button>
@@ -170,7 +291,9 @@
             <div class = "row text-white g-4">
                 <div class = "col-md-6 col-lg-3">
                     <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Attire</a>
+                    <p class = "text-white text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
                 </div>
+
                 <div class = "col-md-6 col-lg-3">
                     <h5 class = "fw-light">Links</h5>
                     <ul class = "list-unstyled">
@@ -184,6 +307,16 @@
                                 <i class = "fas fa-chevron-right me-1"></i> Collection
                             </a>
                         </li>
+                        <li class = "my-3">
+                            <a href = "#" class = "text-white text-decoration-none text-muted">
+                                <i class = "fas fa-chevron-right me-1"></i> Blogs
+                            </a>
+                        </li>
+                        <li class = "my-3">
+                            <a href = "#" class = "text-white text-decoration-none text-muted">
+                                <i class = "fas fa-chevron-right me-1"></i> About Us
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
@@ -194,7 +327,7 @@
                             <i class = "fas fa-map-marked-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            NEAR
+                            Albert Street, New York, AS 756, United States of America
                         </span>
                     </div>
                     <div class = "d-flex justify-content-start align-items-start my-2 text-muted">
@@ -202,7 +335,7 @@
                             <i class = "fas fa-envelope"></i>
                         </span>
                         <span class = "fw-light">
-                            GOCYCLE.support@gmail.com
+                            attire.support@gmail.com
                         </span>
                     </div>
                     <div class = "d-flex justify-content-start align-items-start my-2 text-muted">
@@ -250,9 +383,13 @@
 
 
 
-    
+    <!-- jquery -->
+    <script src = "js/jquery-3.6.0.js"></script>
+    <!-- isotope js -->
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+    <!-- bootstrap js -->
+    <script src = "bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <!-- custom js -->
-    <script src = "/static/javascripts/landing.js"></script>
-
-
-<%-include('footer')-%>
+    <script src = "js/script.js"></script>
+</body>
+</html>
