--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -1,193 +1,262 @@
 <%-include('header')-%>
 
 
-<div class="d-flex" id="wrapper">
-    <!-- Sidebar -->
-    <div class="bg-white" id="sidebar-wrapper">
-        <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
-                class="fas fa-user-secret me-2"></i>goCycle</div>
-        <div class="list-group list-group-flush my-3">
-            <a href="dashboard" class="list-group-item list-group-item-action bg-transparent second-text active">Dashboard</a>
-            <a href="productmanagement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-            <a href="category" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-            <a href="userMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-            <a href="orderMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order management</a>
-            <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add coupons</a>
-            <a href="logout" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+    <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-white" id="sidebar-wrapper">
+            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
+                    class="fas fa-user-secret me-2"></i>goCycle</div>
+            <div class="list-group list-group-flush my-3">
+                <a href="dashboard"
+                    class="list-group-item list-group-item-action bg-transparent second-text active">Dashboard</a>
+                <a href="productmanagement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
+                <a href="category"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
+                <a href="userMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+                <a href="orderMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
+                    management</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
+                    coupons</a>
+                <a href="logout"
+                    class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+            </div>
         </div>
-    </div>
-    <!-- /#sidebar-wrapper -->
+        <!-- /#sidebar-wrapper -->
 
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
-            <div class="d-flex align-items-center">
-                <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
-                <h2 class="fs-2 m-0">Dashboard</h2>
-            </div>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user me-2"></i>Admin
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <div class="container-fluid px-4">
-            <div class="row my-5">
-                
-
-                <div class="col">
-                    <table class="table bg-white rounded shadow-sm  table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col" width="50">Graphical</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                        </tbody>
-                    </table>
-                    
-            
-                    <div  class="col-md-5 pt-4 " style="max-width: 100%; height: 100%;">
-                        <canvas id="myChart" width="400" height="400"></canvas>
-                    </div>
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
+                <div class="d-flex align-items-center">
+                    <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
+                    <h2 class="fs-2 m-0">Dashboard</h2>
                 </div>
-                
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user me-2"></i>Admin
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div class="container-fluid px-4">
+                <div class="row my-5">
+
+
+                    <div class="col">
+                        <table class="table bg-white rounded shadow-sm  table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col" width="50">Graphical</th>
+                                </tr>
+
+                            </thead>
+                            <!-- <select class=" form-select-lg mb-3" name="category">
+                                <option value="day">DAY</option>
+                                <option value="week">WEEK</option>
+                                <option value="year">YEAR</option>
+                        </select> -->
+                            <tbody>
+
+                            </tbody>
+                        </table>
+
+
+                        <div class="col-md-6 pt-4" style=" height: 100%;">
+                            <canvas id="myChart" width="400" height="400"></canvas>
+                            <canvas id="Chart"></canvas>
+                            <canvas id="Chartz" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- /#page-content-wrapper -->
-</div>
+    <!-- /#page-content-wrapper -->
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    var el = document.getElementById("wrapper");
-    var toggleButton = document.getElementById("menu-toggle");
-    let myChart = document.getElementById('myChart')
-
-    // toggleButton.onclick = function () {
-    //     el.classList.toggle("toggled");
-    // };
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        var el = document.getElementById("wrapper");
+        var toggleButton = document.getElementById("menu-toggle");
+        let myChart = document.getElementById('myChart')
+        let Charts = document.getElementById('Chart')
+        let chartz = document.getElementById('Chartz')
 
 
-    fetch('/admin/dashboard/daystat',{
-        method: 'get',
-    }).then((val)=>val.json())
-    .then((data)=>{
-        console.log(data);
-        let xaxis = []
-        let count = []
-        for (const val of data) {
-            val.push(xaxis)
-            console.log(xaxis);
-        }
-    
-    const masspopChart = new Chart(myChart, {
-    type: 'line',
-    data: {
-        labels: [],
-        datasets: [{
-            label: 'Number of orders',
-            data: [],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            y: {
-                beginAtZero: true
+        toggleButton.onclick = function () {
+            el.classList.toggle("toggled");
+        };
+
+
+        fetch('/admin/dashboard/day', {
+            method: 'get',
+        }).then((val) => val.json())
+            .then((data) => {
+                // console.log(data);
+                let xaxis = []
+                let countss = []
+                for (const val of data) {
+                    let date = `${val.detail.day}/${val.detail.month}/${val.detail.year}`
+                    xaxis.push(date)
+                    countss.push(val.count)
+                }
+
+                const masspopChart = new Chart(myChart, {
+                    type: 'bar',
+                    data: {
+                        labels: [...xaxis],
+                        datasets: [{
+                            label: 'Number of orders',
+                            data: [...countss],
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(245, 125, 75, 1.2)',
+                                'rgb(255, 99, 132)',
+                                'rgb(54, 162, 235)',
+                                'rgb(255, 205, 86)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            y: {
+                                beginAtZero: true
+                            }
+                        }
+                    }
+                })
+            })
+
+
+        fetch('/admin/dashboard/month', {
+            method: "get",
+        }).then(data => data.json()).then((data) => {
+            console.log(data);
+
+            let xaxis = []
+            let countss = [] 
+            var months = [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ];
+            for (const val of data) {
+                let month= `${val.detail.month}`
+                let m = months[month]
+                xaxis.push(m)
+                countss.push(val.count)
             }
-        }
-    }
-    })
-})
 
-// let massPopChart = new Chart(myChart, {
-//       type:'pie', // bar, horizontalBar, pie, line, doughnut, radar, polarArea
-//       data:{
-//          labels: ["Kid", "Men", "Women"],
-//         datasets:[{
-//           label:'Population',
-//         //    data: [{{Categorysales.[0].count}},{{Categorysales.[1].count}},{{Categorysales.[2].count}}],
-//           //backgroundColor:'green',
-//           backgroundColor: [
-//                         "#5b6be8",
-//                         "#fb6ba8",
-//                         "#ec6be8",
-//                         "#2b6be8",
-                       
-//                     ],
-//                     hoverBackgroundColor: [
-//                         "#5b6be8",  
-//                     ],
-//                     hoverBorderColor: "#fff"
-          
-//         }]
-//       },
-//       options:{
-//         title:{
-//           display:true,
-//              text:'Category wise sale',
-//           fontSize:15
-//         },
-//         legend:{
-//           display:true,
-//           position:'right',
-//           labels:{
-//             fontColor:'#000'
-//           }
-//         },
-//         layout:{
-//           padding:{
-//             left:50,
-//             right:0,
-//             bottom:0,
-//             top:0
-//           }
-//         },
-//         tooltips:{
-//           enabled:true
-//         }
-//       }
-//     });
-  </script>
-    
-</script>
+            const masspopChart = new Chart(chartz, {
+                type: 'bar',
+                data: {
+                    labels: [...xaxis],
+                    datasets: [{
+                        label: 'Number of orders in a week',
+                        data: [...countss],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(245, 125, 75, 1.2)',
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            })
+
+        })
 
 
-</div>
+        fetch('/admin/dashboard/week', {
+            method: "get",
+        }).then(data => data.json()).then((data) => {
+            // console.log(data);
 
-<%-include('footer')-%>
+            let xaxis = []
+            let countss = []
+            for (const val of data) {
+                let week = `${val.detail.week}`
+                xaxis.push(week)
+                countss.push(val.count)
+            }
+
+            const masspopChart = new Chart(Charts, {
+                type: 'pie',
+                data: {
+                    labels: [...xaxis],
+                    datasets: [{
+                        label: 'Number of orders in a week',
+                        data: [...countss],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(245, 125, 75, 1.2)',
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            })
+
+        })
+    </script>
+
+    </script>
+
+
+    </div>
+
+    <%-include('footer')-%>
