--- a/Project/views/admin/add-products.ejs
+++ b/Project/views/admin/add-products.ejs
@@ -94,11 +94,9 @@
 
         }
         function appear() {
-            console.log('this is appear');
+            console.log('this is ');
             let a =  document.getElementById('imgView1')
             a.style.display = 'block'
-            console.log(a);
-
         }
         const imagebox1 = document.getElementById("image-box1");
         const crop_btn1 = document.getElementById("crop-btn1");
