--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -8,20 +8,22 @@
                     class="fas fa-user-secret me-2"></i>goCycle</div>
             <div class="list-group list-group-flush my-3">
                 <a href="dashboard"
-                    class="list-group-item list-group-item-action bg-transparent second-text active">Dashboard</a>
-                <a href="productmanagement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-                <a href="category"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-                <a href="userMangement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-                <a href="orderMangement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
-                    management</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
-                    coupons</a>
-                <a href="logout"
-                    class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
+            <a href="productmanagement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
+            <a href="category"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
+            <a href="userMangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+            <a href="bannermangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner mangement</a>
+            <a href="orderMangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
+                management</a>
+            <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
+                coupons</a>
+            <a href="logout"
+                class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -40,7 +42,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
@@ -52,7 +54,7 @@
                             </ul>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </nav>
 
             <div class="container-fluid px-4">
@@ -226,7 +228,7 @@
                     datasets: [{
                         label: 'Number of orders in a week',
                         data: [...countss],
-                        backgroundColor: [
+                        backgroundColor: [ 
                             'rgba(255, 99, 132, 0.2)',
                             'rgba(54, 162, 235, 0.2)',
                             'rgba(245, 125, 75, 1.2)',
