--- a/Project/views/admin/adDashUserManage.ejs
+++ b/Project/views/admin/adDashUserManage.ejs
@@ -6,13 +6,23 @@
                 <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
                         class="fas fa-user-secret me-2"></i>goCycle</div>
                 <div class="list-group list-group-flush my-3">
-                    <a href="dashboard" class="list-group-item list-group-item-action bg-transparent second-text active">Dashboard</a>
-                    <a href="productmanagement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-                    <a href="category" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-                    <a href="userMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-                    <a href="orderMangement" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order management</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add coupons</a>
-                    <a href="logout" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+                    <a href="dashboard"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
+            <a href="productmanagement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
+            <a href="category"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
+            <a href="userMangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+            <a href="bannermangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner mangement</a>
+            <a href="orderMangement"
+                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
+                management</a>
+            <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
+                coupons</a>
+            <a href="logout"
+                class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
                 </div>
             </div>
             <!-- /#sidebar-wrapper -->
