--- a/Project/views/admin/add-category.ejs
+++ b/Project/views/admin/add-category.ejs
@@ -6,16 +6,19 @@
         <h1>Add category</h1>
         <!-- LOGIN FORM -->
         <form action="/admin/add-category" method="post" >
-       
             <div class="form-group">
                 <label class="fs-4">Name</label>
-                <input type="text" class="form-control fs-4" name="name" value="">
+                <input type="text" class="form-control fs-4" name="name" value="" id="username" onkeyup="validatename()">
+                <span id="username-err" class="text-danger"></span>
             </div>
-          
+            <p id="error-msg" class="fs-4" style="color:rgb(255, 0, 0) "><%=catError%></p>
+            <div id="emailmsg" class="fs-4" style="color:rgb(170, 47, 47);display:none">Please fill the required</div>
             <button type="submit" class="btn btn-warning btn-lg fs-4">Add</button>
         </form>
     
         <hr>    
     </div>
     </div>
+
+    <script src="/static/javascripts/validation.js"></script>
 <%-include('footer')-%>
