--- a/Project/views/user/checkoutpage.ejs
+++ b/Project/views/user/checkoutpage.ejs
@@ -1,44 +1,56 @@
 <%-include('header')-%>
+    
 
     <!-- navbar -->
-    <!-- <nav class = "navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
-    <div class = "container">
-        <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
-            <span class = "text-uppercase fw-lighter ms-2">GOCYCLE</span>
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
+        <div class="container">
+            <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
+                <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
+            </a>
 
-        <div class = "order-lg-2 nav-btns">
-            <button type = "button" class = "btn position-relative">
-                <i class = "fa fa-heart"></i>
-                <span class = "position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
+            <div class="order-lg-2 nav-btns">
+                <button type="button" class="btn position-relative">
+                    <a href="/cart" class="fa fa-shopping-cart"></a>
+                    <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
+                    <span class="badge badge-light">
+
+                    </span>
+                </button>
+                <button type="button" class="btn position-relative">
+                    <i class="fa fa-heart"></i>
+                    <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
+                </button>
+
+                <button type="button" class="btn position-relative">
+                    <a href="/profile" class="fa-solid fa-user"></a>
+                </button>
+
+
+
+            </div>
+
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <button type = "button" class = "btn position-relative">
-                <i class = "fa fa-search"></i>
-            </button>
-            
-            
 
+            <div class="collapse navbar-collapse order-lg-1" id="navMenu">
+                <ul class="navbar-nav mx-auto text-center">
+                    <li class="nav-item px-2 py-2">
+                        <a class="nav-link text-uppercase text-dark" href="/">home</a>
+                    </li>
+                    <li class="nav-item px-2 py-2">
+                        <!-- <a class = "nav-link text-uppercase text-dark" href = "#collection">collection</a> -->
+                        <div class="dropdown ">
+                            <a class="dropbtn nav-link text-uppercase text-dark">Category</a>
+                        </div>
+                    </li>
+                    <li class="nav-item px-2 py-2">
+                        <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-        <button class = "navbar-toggler border-0" type = "button" data-bs-toggle = "collapse" data-bs-target = "#navMenu">
-            <span class = "navbar-toggler-icon"></span>
-        </button>
-
-        <div class = "collapse navbar-collapse order-lg-1" id = "navMenu">
-            <ul class = "navbar-nav mx-auto text-center">
-                <li class = "nav-item px-2 py-2">
-                    <a class = "nav-link text-uppercase text-dark" href = "#header">home</a>
-                </li>
-                <li class = "nav-item px-2 py-2">
-                    <a class = "nav-link text-uppercase text-dark" href = "#collection">collection</a>
-                </li>
-                <li class = "nav-item px-2 py-2">
-                    <a class = "nav-link text-uppercase text-dark" href = "#special">specials</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav> -->
+    </nav>
     <!-- end of navbar -->
 
     <div class="container">
@@ -83,17 +95,19 @@
                 </div>
             </form> -->
             </div>
+            <div>
 
-            <div class="col-md-4 d-flex mt-5">
-                <div>
-                    <h5 class="mb-4" style="font-weight: bold">
-                        Saved Address
-                    </h5>
 
-                    <%if(address){%>
-                        <%address.forEach((element,i)=>{%>
-                            <div class="form-check col-md-6 py-2">
-                            
+                <div class="col-md-4 d-flex mt-5" style="padding-top: 10vh;">
+                    <div>
+                        <h5 class="mb-4" style="font-weight: bold">
+                            Saved Address
+                        </h5>
+
+                        <%if(address){%>
+                            <%address.forEach((element,i)=>{%>
+                                <div class="form-check col-md-6 py-2">
+
                                     <input class="form-check-input" type="radio"
                                         value="<%=element.firstname%> <%=element.lastname%> <%=element.address%> <%=element.town%> <%=element.pincode%>"
                                         name="savedAddress" id="flexRadioDefault<%=i%>"
@@ -105,83 +119,84 @@
                                                     <%=element.town%>
                                                         <%=element.pincode%>
                                     </label>
-                            </div>
-                            <%})%>
-                                <%}else{%>
-                                    <p class="d-flex total-price">
-                                        <span lass="col-12">saved address is empty</span>
-                                    </p>
-                                    <%}%>
+                                </div>
+                                <%})%>
+                                    <%}else{%>
+                                        <p class="d-flex total-price">
+                                            <span lass="col-12">saved address is empty</span>
+                                        </p>
+                                        <%}%>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-8 order-md-1">
-                <h4 class="mb-3">Billing address</h4>
-                <form class="needs-validation" id="checkout-form">
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="firstName">First name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value=""
-                                name="firstName" required>
-                            <div class="invalid-feedback"> Valid first name is required. </div>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="lastName">Last name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="" value=""
-                                name="lastName" required>
-                            <div class="invalid-feedback"> Valid last name is required. </div>
-                        </div>
-                    </div>
-
-
-                    <div class="mb-3">
-                        <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="" name="address" required>
-                        <div class="invalid-feedback"> Please enter your shipping address. </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-5 mb-3">
-                            <label for="country">State</label>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="state" placeholder="" name="state" value=''>
-                                <div class="invalid-feedback"> Please enter your shipping address. </div>
+                <div class="col-md-8 order-md-1">
+                    <h4 class="mb-3">Billing address</h4>
+                    <form class="needs-validation" id="checkout-form">
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="firstName">First name</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="" value=""
+                                    name="firstName" required>
+                                <div class="invalid-feedback"> Valid first name is required. </div>
                             </div>
-                            <div class="invalid-feedback"> Please select a valid country. </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="lastName">Last name</label>
+                                <input type="text" class="form-control" id="lastName" placeholder="" value=""
+                                    name="lastName" required>
+                                <div class="invalid-feedback"> Valid last name is required. </div>
+                            </div>
                         </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="state">Pincode</label>
-                            <input type="text" class="form-control" id="pin" placeholder="" name="pincode">
 
-                            <div class="invalid-feedback"> Please provide a valid state. </div>
+
+                        <div class="mb-3">
+                            <label for="address">Address</label>
+                            <input type="text" class="form-control" id="address" placeholder="" name="address" required>
+                            <div class="invalid-feedback"> Please enter your shipping address. </div>
                         </div>
-                        <input type="text" name="userId" value="<%=userId%>" hidden>
 
-                    </div>
-                    <div class="d-block my-3">
-                        <hr class="mb-4">
-                        <h4 class="mb-3">Payment</h4>
+                        <div class="row">
+                            <div class="col-md-5 mb-3">
+                                <label for="country">State</label>
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" id="state" placeholder="" name="state"
+                                        value=''>
+                                    <div class="invalid-feedback"> Please enter your shipping address. </div>
+                                </div>
+                                <div class="invalid-feedback"> Please select a valid country. </div>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="state">Pincode</label>
+                                <input type="text" class="form-control" id="pin" placeholder="" name="pincode">
+
+                                <div class="invalid-feedback"> Please provide a valid state. </div>
+                            </div>
+                            <input type="text" name="userId" value="<%=userId%>" hidden>
+
+                        </div>
                         <div class="d-block my-3">
-                            <div class="custom-control custom-radio">
-                                <input id="credit" name="paymentmethod" type="radio" class="custom-control-input"
-                                    checked="" value="COD">
-                                <label class="custom-control-label" for="credit">CASH ON DELIVERY</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="debit" name="paymentmethod" type="radio" class="custom-control-input"
-                                    value="Razorpay">
-                                <label class="custom-control-label" for="debit">Razorpay</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="debit" name="paymentmethod" type="radio" class="custom-control-input"
-                                    value="Paypal">
-                                <label class="custom-control-label" for="debit">Paypal</label>
-                            </div>
-                            <!-- <div class="custom-control custom-radio">
+                            <hr class="mb-4">
+                            <h4 class="mb-3">Payment</h4>
+                            <div class="d-block my-3">
+                                <div class="custom-control custom-radio">
+                                    <input id="credit" name="paymentmethod" type="radio" class="custom-control-input"
+                                        checked="" value="COD">
+                                    <label class="custom-control-label" for="credit">CASH ON DELIVERY</label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="debit" name="paymentmethod" type="radio" class="custom-control-input"
+                                        value="Razorpay">
+                                    <label class="custom-control-label" for="debit">Razorpay</label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="debit" name="paymentmethod" type="radio" class="custom-control-input"
+                                        value="Paypal">
+                                    <label class="custom-control-label" for="debit">Paypal</label>
+                                </div>
+                                <!-- <div class="custom-control custom-radio">
                         <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
                         <label class="custom-control-label" for="paypal">PayPal</label>
                     </div> -->
-                        </div>
-                        <!-- <div class="row">
+                            </div>
+                            <!-- <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="cc-name">Name on card</label>
                         <input type="text" class="form-control" id="cc-name" placeholder="" required="">
@@ -206,12 +221,12 @@
                         <div class="invalid-feedback"> Security code required </div>
                     </div>
                 </div> -->
-                        <hr class="mb-4">
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-                </form>
+                            <hr class="mb-4">
+                            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                    </form>
+                </div>
             </div>
         </div>
-
     </div>
 
     <SCript>
@@ -250,9 +265,9 @@
                 "description": "Test Transaction",
                 "image": "https://example.com/your_logo",
                 "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-                "handler":(response)=>{
-                    verifyPayment(response,order)
-                },   
+                "handler": (response) => {
+                    verifyPayment(response, order)
+                },
                 "prefill": {
                     "name": "Gaurav Kumar",
                     "email": "gaurav.kumar@example.com",
@@ -269,20 +284,20 @@
             rzp1.open();
         }
 
-        function verifyPayment(payment,order){
-            console.log(payment,order);
+        function verifyPayment(payment, order) {
+            console.log(payment, order);
             $.ajax({
-                url:'/verify-payment',
-                data:{
+                url: '/verify-payment',
+                data: {
                     payment,
                     order,
                 },
-                method:'post',
-                success:(response)=>{
+                method: 'post',
+                success: (response) => {
                     console.log(response);
                     if (response.status) {
                         location.href = '/order-placed'
-                    }else{
+                    } else {
                         alert('payment failed')
                     }
                 }
@@ -291,3 +306,18 @@
     </SCript>
 
     <%-include('footer')-%>
+
+
+        <!DOCTYPE html>
+        <html>
+
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width,initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>Checkout Form</title>
+            <link rel="stylesheet"
+                href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" type="text/css">
+                
+        </head>
+        </html>
