--- a/Project/views/user/header.ejs
+++ b/Project/views/user/header.ejs
@@ -3,6 +3,11 @@
 
 <head>
   <title></title>
+
+  <!-- sweet alert -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <!-- ///////////////////////////// -->
   <link rel = "stylesheet" href = "bootstrap-5.0.2-dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -29,11 +34,6 @@
 
   <!-- razorpay cdn -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
-  
-
-
-
 </head>
 
 <body>
