--- a/Project/views/admin/adProductManage.ejs
+++ b/Project/views/admin/adProductManage.ejs
@@ -8,22 +8,24 @@
                     class="fas fa-user-secret me-2"></i>goCycle</div>
             <div class="list-group list-group-flush my-3">
                 <a href="dashboard"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
-            <a href="productmanagement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-            <a href="category"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-            <a href="userMangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-            <a href="bannermangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner mangement</a>
-            <a href="orderMangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
-                management</a>
-            <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
-                coupons</a>
-            <a href="logout"
-                class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
+                <a href="productmanagement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
+                <a href="category"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
+                <a href="userMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+                <a href="bannermangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner
+                    mangement</a>
+                <a href="orderMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
+                    management</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
+                    coupons</a>
+                <a href="add-offers" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add offers</a>
+                <a href="logout"
+                    class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -139,7 +141,7 @@
     <!-- /#page-content-wrapper -->
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script> -->
     <script>
         var el = document.getElementById("wrapper");
         var toggleButton = document.getElementById("menu-toggle");
