--- a/Project/views/admin/addBanner.ejs
+++ b/Project/views/admin/addBanner.ejs
@@ -23,6 +23,7 @@
                     management</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
                     coupons</a>
+                <a href="add-offers" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add offers</a>
                 <a href="logout"
                     class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
             </div>
@@ -139,7 +140,14 @@
 
 
 
+    <script>
+        var el = document.getElementById("wrapper");
+        var toggleButton = document.getElementById("menu-toggle");
 
+        toggleButton.onclick = function () {
+            el.classList.toggle("toggled");
+        };
+    </script>
 
 
 
@@ -150,9 +158,6 @@
 
 
         <script>
-
-
-
 
             function viewImage1(event) {
                 var fileInput1 = document.getElementById('id_image1');
