--- a/Project/views/admin/edit-category.ejs
+++ b/Project/views/admin/edit-category.ejs
@@ -7,15 +7,15 @@
         <!-- LOGIN FORM -->
         <form action="/admin/edit-category" method="post" enctype="multipart/form-data" >
             <div class="form-group">
-                <label class="fs-4">Name</label>
-                <input type="text" class="form-control fs-4" name="name" value="<%=data.name%>" id="username" onkeyup="validatename()">
+                <label >Name</label>
+                <input type="text" class="form-control " name="name" value="<%=data.name%>" id="username" onkeyup="validatename()">
                 <span id="username-err" class="text-danger"></span>
             </div>
-            <p id="error-msg" class="fs-4" style="color:rgb(255, 0, 0) "><%=catError%></p>
-            <div id="emailmsg" class="fs-4" style="color:rgb(170, 47, 47);display:none">Please fill the required</div>
+            <p id="error-msg"  style="color:rgb(255, 0, 0) "><%=catError%></p>
+            <div id="emailmsg"  style="color:rgb(170, 47, 47);display:none">Please fill the required</div>
             <input type="text" name="catId" id="" value="<%=data._id%>" hidden>
 
-            <button type="submit" class="btn btn-warning btn-lg fs-4">Update</button>
+            <button type="submit" class="btn btn-warning">Update</button>
         </form>
         
     
