--- a/Project/views/admin/orderMangement.ejs
+++ b/Project/views/admin/orderMangement.ejs
@@ -7,22 +7,25 @@
                     class="fas fa-user-secret me-2"></i>goCycle</div>
             <div class="list-group list-group-flush my-3">
                 <a href="dashboard"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
-            <a href="productmanagement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-            <a href="category"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-            <a href="userMangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-            <a href="bannermangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner mangement</a>
-            <a href="orderMangement"
-                class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
-                management</a>
-            <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
-                coupons</a>
-            <a href="logout"
-                class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
+                <a href="productmanagement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
+                <a href="category"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
+                <a href="userMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
+                <a href="bannermangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner
+                    mangement</a>
+                <a href="orderMangement"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
+                    management</a>
+                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
+                    coupons</a>
+                <a href="add-offers"
+                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add offers</a>
+                <a href="logout"
+                    class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -69,8 +72,8 @@
                                     <!-- <th scope="col">Name</th> -->
                                     <th scope="col">Paymentmethod</th>
                                     <th scope="col">Total</th>
-                                    
-                                    <th scope="col">State</th> 
+
+                                    <th scope="col">State</th>
                                     <th scope="col">Status</th>
 
                                     <th scope="col">Option</th>
@@ -90,85 +93,107 @@
                                         <td>
                                             <%=orders[i].totalAmount%>
                                         </td>
-                                        
+
                                         <td>
                                             <%=orders[i].deliveryDetails.state%>
                                         </td>
-                                        <%if(orders[i].ordercanceled === false){%>
-                                        <td><%=orders[i].status%></td>
-                                        <%}else{%>
-                                            <td>ordercanceled</td>
-                                        <%}%>
-
-                                        
-                                            <%if(orders[i].status == "delivered"){%>
-                                                <td scope="col">delivered</td>  
-                                            <%}else if(orders[i].ordercanceled === false){%>
-                                                <td scope="col"><button class="btn btn-danger" onclick="confirmDelete(`<%=orders[i]._id%>`)"  >Cancel Order</button></td>
-                                            <%}else{%>
-                                                <td>order cancelled</td>
-                                            <%}%>
-                                        
-                                           
-                                            <%if(orders[i].status == "delivered"){%>
-                                                <td>delivered</td>
-                                            <%}else if(orders[i].ordercanceled === true){%>
-                                                <td></td>
-                                            <%}else{%>  
-                                            <td>    
-                                                <form action="/admin/change-status/<%=orders[i]._id%>" method="post">
-                                                <select class=" form-select-lg mb-3" name="status" > 
-                                                        <option name="" value="0" selected>Select </option>
-                                                        <option value="pending">pending</option>
-                                                        <option value="placed">placed</option>
-                                                        <option value="delivered">delivered</option>
-                                                </select> 
-                                                <button class="btn btn-info float-left second ms-3"> SAVE </button>
-                                            </form>
+                                        <%if(orders[i].ordercanceled===false){%>
+                                            <td>
+                                                <%=orders[i].status%>
                                             </td>
-                                            <%}%>
-                                           
-                                        </td>
-                                        
-                                        <td>
-                                            
-                                        </td>
+                                            <%}else{%>
+                                                <td>ordercanceled</td>
+                                                <%}%>
+
+
+                                                    <%if(orders[i].status=="delivered" ){%>
+                                                        <td scope="col">delivered</td>
+                                                        <%}else if(orders[i].ordercanceled===false){%>
+                                                            <td scope="col"><button class="btn btn-danger"
+                                                                    onclick="confirmDelete(`<%=orders[i]._id%>`)">Cancel
+                                                                    Order</button></td>
+                                                            <%}else{%>
+                                                                <td>order cancelled</td>
+                                                                <%}%>
+
+
+                                                                    <%if(orders[i].status=="delivered" ){%>
+                                                                        <td>delivered</td>
+                                                                        <%}else if(orders[i].ordercanceled===true){%>
+                                                                            <td></td>
+                                                                            <%}else{%>
+                                                                                <td>
+                                                                                    <form
+                                                                                        action="/admin/change-status/<%=orders[i]._id%>"
+                                                                                        method="post">
+                                                                                        <select
+                                                                                            class=" form-select-lg mb-3"
+                                                                                            name="status">
+                                                                                            <option name="" value="0"
+                                                                                                selected>Select
+                                                                                            </option>
+                                                                                            <option value="pending">
+                                                                                                pending</option>
+                                                                                            <option value="placed">
+                                                                                                placed</option>
+                                                                                            <option value="delivered">
+                                                                                                delivered</option>
+                                                                                        </select>
+                                                                                        <button
+                                                                                            class="btn btn-info float-left second ms-3">
+                                                                                            SAVE </button>
+                                                                                    </form>
+                                                                                </td>
+                                                                                <%}%>
+
+                                                                                    </td>
+
+                                                                                    <td>
+
+                                                                                    </td>
 
                                     </tr>
                                     <%}%>
                             </tbody>
                         </table>
-                        
-                          <% if (pages > 0) { %>
-                            <ul class="pagination text-center">
-                                <% if (current == 1) { %>
-                                    <li class="disabled"><a>First</a></li>
-                                <% } else { %>
-                                    <li><a href="?page=1">First</a></li>
-                                <% } %>
-                                <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-                                <% if (i !== 1) { %>
-                                    <li class="disabled"><a>...</a></li>
-                                <% } %>
-                                <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
-                                    <% if (i == current) { %>
-                                        <li class="active"><a><%= i %></a></li>
-                                    <% } else { %>
-                                        <li><a href="?page=<%=i%>"><%= i %></a></li>
-                                    <% } %>
-                                    <% if (i == Number(current) + 4 && i < pages) { %>
-                                        <li class="disabled"><a>...</a></li>
-                                    <% } %>
-                                <% } %>
-                                <% if (current == pages) { %>
-                                    <li class="disabled"><a>Last</a></li>
-                                <% } else { %>
-                                    <li><a href="?page=<%=pages%>">Last</a></li>
-                                <% } %>
-                            </ul>
-                        <% } %>
 
-                          
+                        <% if (pages> 0) { %>
+                            <ul class="pagination text-center">
+                                <% if (current==1) { %>
+                                    <li class="disabled"><a>First</a></li>
+                                    <% } else { %>
+                                        <li><a href="?page=1">First</a></li>
+                                        <% } %>
+                                            <% var i=(Number(current)> 5 ? Number(current) - 4 : 1) %>
+                                                <% if (i !==1) { %>
+                                                    <li class="disabled"><a>...</a></li>
+                                                    <% } %>
+                                                        <% for (; i <=(Number(current) + 4) && i <=pages; i++) { %>
+                                                            <% if (i==current) { %>
+                                                                <li class="active"><a>
+                                                                        <%= i %>
+                                                                    </a></li>
+                                                                <% } else { %>
+                                                                    <li><a href="?page=<%=i%>">
+                                                                            <%= i %>
+                                                                        </a></li>
+                                                                    <% } %>
+                                                                        <% if (i==Number(current) + 4 && i < pages) { %>
+                                                                            <li class="disabled"><a>...</a></li>
+                                                                            <% } %>
+                                                                                <% } %>
+                                                                                    <% if (current==pages) { %>
+                                                                                        <li class="disabled"><a>Last</a>
+                                                                                        </li>
+                                                                                        <% } else { %>
+                                                                                            <li><a
+                                                                                                    href="?page=<%=pages%>">Last</a>
+                                                                                            </li>
+                                                                                            <% } %>
+                            </ul>
+                            <% } %>
+
+
                     </div>
 
                 </div>
@@ -213,27 +238,27 @@
         //     })
         // }
 
-    function confirmDelete(proId) {
-    Swal.fire({
-        title: 'Are you sure?',
-        text: "You won't be able to revert this!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, cancel it!'
-    }).then((result) => {
-        if (result.isConfirmed) {
-            Swal.fire(
-                'Order Canceled!',
-                'Your order has been canceled.',
-                'success'
-            ).then(() => {
-                location.href = `/admin/cancelorder/${proId}`
+        function confirmDelete(proId) {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, cancel it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire(
+                        'Order Canceled!',
+                        'Your order has been canceled.',
+                        'success'
+                    ).then(() => {
+                        location.href = `/admin/cancelorder/${proId}`
+                    })
+                }
             })
         }
-    })
-  }
     </script>
 
 
