--- a/Project/views/user/header.ejs
+++ b/Project/views/user/header.ejs
@@ -8,14 +8,14 @@
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- ///////////////////////////// -->
-  <link rel = "stylesheet" href = "bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <!-- <link rel = "stylesheet" href = "bootstrap-5.0.2-dist/css/bootstrap.min.css"> -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet"> -->
 
-  <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script> -->
   <link rel='stylesheet' href='/static/stylesheets/style.css' />
   <link rel="stylesheet" href="/static/stylesheets/main.css">
   <!-- Font Awesome -->
